tests/suite/errors/e50_int_suffix_out_of_range.rs
// err: literal value 256 is out of range for `u8`

fn main() {
    let _: u8 = 256u8;
}
